--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,21 +1,35 @@
-<footer>
-  <div class="footer-content">
-    <p>Theme created by <a href="https://www.timeaton.dev">Tim Eaton</a>.</p>
+---
+---
+
+<footer class="footer flex flex-row">
+  <div class="basis-1/6"></div>
+  <div class="basis-2/3 center">
+    <button class="btn btn-primary py-6 px-10">Create your Community</button>
   </div>
+  <div class="basis-1/6"></div>
 </footer>
+    <style>
+      .footer {
+        position: sticky;
+        bottom: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        /* background-color: var(--color-background); */
+        /* color: var(--color-text-base); */
+        /* box-shadow: 2px 9px 24px 0px rgba(0,0,0,0.5); */
+        /* -webkit-box-shadow: 2px 9px 24px 0px rgba(0,0,0,0.5); */
+        /* -moz-box-shadow: 2px 9px 24px 0px rgba(0,0,0,0.5); */
+        padding: 10px 20px;
+        z-index: 1000;
+        /* border-bottom: 2px solid var(--color-border);  */
+      }
 
-<style>
-  footer {
-    margin-top: auto;
-    width: 100%;
-    min-height: 200px;
-    border-top: 1px solid var(--color-border);
+     
+  .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
-  .footer-content {
-    max-width: var(--max-width);
-    color: var(--color-text-muted);
-    margin: 0 auto;
-    padding: 2rem var(--gap);
-  }
-</style>
+    </style>
