--- a/src/components/header/LogoContainer.astro
+++ b/src/components/header/LogoContainer.astro
@@ -1,31 +1,50 @@
 ---
 import LogoIcon from "./LogoIcon.astro"
+import { fab, faYoutube, faGithub, faTelegram } from '@fortawesome/free-brands-svg-icons'
+import {faGlobe} from "@fortawesome/free-solid-svg-icons"
+import { library, icon, type Icon } from "@fortawesome/fontawesome-svg-core";
+library.add(fab, faTelegram, faYoutube, faGithub, faGlobe);
 
-const youtubeIconUrl = 'https://assets.api.uizard.io/api/cdn/stream/bf6c4229-ba6d-4b6a-83ce-808b9e084635.png';
-const telegramIconUrl = 'https://assets.api.uizard.io/api/cdn/stream/f0661113-a625-4151-b7d5-9d2647a35d59.png';
-const webIconUrl = 'https://assets.api.uizard.io/api/cdn/stream/0e42f794-3a8f-4640-9bc0-b47157687aba.png';
-const githubIconUrl = 'https://assets.api.uizard.io/api/cdn/stream/befd2e85-62f8-4584-9672-5b9dfc779a08.png';
+type Social = {
+  icon: Icon;
+  url: string;
+}
+
+const araSocials: Social[] = [
+  {
+    icon: icon({ prefix: "fab", iconName: faYoutube.iconName }),
+    url: "https://youtube.com/@medet-ahmetson",
+  },
+  {
+    icon: icon({ prefix: "fab", iconName: faTelegram.iconName }),
+    url: "https://t.me/ara.sangha",
+  },
+  {
+    icon: icon({ prefix: "fas", iconName: faGlobe.iconName }),
+    url: "https://ara.foundation/"
+  },
+  {
+    icon: icon({ prefix: "fab", iconName: faGithub.iconName }),
+    url: "https://github.com/ara-foundation/"
+  }
+]
+// 
 ---
 
 <div class="logo-container">
-  <LogoIcon></LogoIcon>
-  <span>ARA</span>
-  <nav>
-    <a class="nav-link">
-      <img src={youtubeIconUrl} />
-    </a>
-    <a class="nav-link">
-      <img src={telegramIconUrl} />
-    </a>
-    <a class="nav-link">
-      <img src={webIconUrl} />
-    </a>
-    <a class="nav-link">
-      <img src={githubIconUrl} />
-    </a>
+  <a href="/" class="flex flex-row mr-2">
+    <LogoIcon></LogoIcon>
+    <span class="inline-block mt-1 ml-1">ARA</span>
+  </a>
+  <nav class="flex pl-2">
+    {araSocials.map((araSocial) => 
+      <a class="text-lg mr-3 mt-2 inline-block" href={araSocial.url}, target="_blank">
+        <Fragment set:html={araSocial.icon.html} />
+      </a>
+    )}
   </nav>
 </div>
-<style define:vars={{youtubeIconUrl}}>
+<style>
   .logo-container {
     top: 0px;
     left: 3px;
@@ -43,17 +62,4 @@ const githubIconUrl = 'https://assets.api.uizard.io/api/cdn/stream/befd2e85-62f8
     line-height: 37px;
   }
 
-  .logo-container > nav {
-    display: flex;
-  }
-
-  .nav-link > img {
-    top: 13px;
-    left: 134px;
-    width: 23px;
-    height: 17px;
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
 </style>
